--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,10 @@
         }
     },
     "scripts": {
+        "post-install-cmd": [
+            "chgrp -R www-data storage bootstrap/cache",
+            "chmod -R ug+rwx storage bootstrap/cache"
+        ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
